Initial menu and UI skin (adapted from Beat Feet).

--- a/build.gradle
+++ b/build.gradle
@@ -84,5 +84,6 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+        implementation 'com.gmail.blueboxware:libgdxpluginannotations:1.16'
     }
 }
