Show game icons (including for each player). Select a random game on the server as players sign up.

--- a/build.gradle
+++ b/build.gradle
@@ -96,6 +96,11 @@ project(":core") {
         api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
         implementation 'com.gmail.blueboxware:libgdxpluginannotations:1.16'
         implementation 'kryonet:kryonet:2.21'
-        implementation 'com.esotericsoftware.kryo:kryo5:5.1.0'
+        implementation('com.esotericsoftware.kryo:kryo:2.24.0') {
+            // Both kryonet and kryo depend on the same libraries, but they shade them which causes issues such as:
+            // java.lang.RuntimeException: Duplicate class com.esotericsoftware.reflectasm.AccessClassLoader found in modules kryo-2.24.0.jar (com.esotericsoftware.kryo:kryo:2.24.0) and reflectasm-1.07-shaded-shaded.jar (com.esotericsoftware.reflectasm:reflectasm:1.07)
+            exclude group: 'com.esotericsoftware.minlog', module: 'minilog'
+            exclude group: 'org.objenesis', module: 'objenesis'
+        }
     }
 }
