High scores for single player.
No need for multiplayer, because the scoring mechanics are different (e.g. more asteroids will be available
for shooting in a game with lots of players, compared to a single player version).

--- a/build.gradle
+++ b/build.gradle
@@ -104,5 +104,6 @@ project(":core") {
         api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
         implementation 'com.gmail.blueboxware:libgdxpluginannotations:1.16'
         implementation 'com.github.crykn:kryonet:2.22.7'
+        implementation 'com.google.code.gson:gson:2.8.6'
     }
 }
