Use gratuidous visual effects.

--- a/build.gradle
+++ b/build.gradle
@@ -112,6 +112,8 @@ project(":core") {
         implementation 'com.gmail.blueboxware:libgdxpluginannotations:1.16'
         implementation 'com.github.crykn:kryonet:2.22.7'
         implementation 'com.google.code.gson:gson:2.8.6'
+        implementation 'com.crashinvaders.vfx:gdx-vfx-core:0.5.0'
+        implementation 'com.crashinvaders.vfx:gdx-vfx-effects:0.5.0'
     }
 
     // https://stackoverflow.com/a/54006518
