Further juggling of the build.gradle to clean up. Remove unused repos.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,7 +17,7 @@ android {
         exclude 'META-INF/robovm/ios/robovm.xml'
     }
     defaultConfig {
-        applicationId "com.serwyloretrowars"
+        applicationId "com.serwylo.retrowars"
         minSdkVersion 14
         targetSdkVersion 29
 
