Added network discovery using JmDNS.
Server will start up a multicast DNS instance, and broadcast itself
as a `_retrowars._tcp.local.` service. Client will probe the network
for servicse of this type.

The server continues this multicast DNS running in the background
so that other players can join whenever they want.

The client closes down their DNS receiver once they find the server.

--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,7 @@ project(":core") {
         implementation "io.ktor:ktor-client-websockets:$ktor_version"
         implementation "io.ktor:ktor-websockets:$ktor_version"
         implementation "ch.qos.logback:logback-classic:1.2.3" // For ktor
+        implementation 'org.jmdns:jmdns:3.5.7'
     }
 
     // https://stackoverflow.com/a/54006518
