--- a/build.gradle
+++ b/build.gradle
@@ -115,6 +115,7 @@ project(":core") {
         implementation "io.ktor:ktor-server-netty:$ktor_version"
         implementation "io.ktor:ktor-client-cio:$ktor_version"
         implementation "io.ktor:ktor-client-gson:$ktor_version"
+        implementation "io.ktor:ktor-gson:$ktor_version"
         implementation "io.ktor:ktor-client-websockets:$ktor_version"
         implementation "io.ktor:ktor-websockets:$ktor_version"
         implementation "ch.qos.logback:logback-classic:1.2.3" // For ktor
