--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
-include 'desktop', 'android', 'core', 'texture-packer', 'server'
+if (!hasProperty('onlyServer')) {
+    include 'desktop', 'android', 'texture-packer'
+}
+
+include 'core', 'server'
