Make clients and servers aware of eachothers version incompatibilities.
Servers can specify the minimum supported client version, and if the
client version is below this, they will show a warning/error when displaying
the server in question.

This will give the freedom for servers to be upgraded out of lockstep with
clients without too much issue.

--- a/build.gradle
+++ b/build.gradle
@@ -112,7 +112,10 @@ project(":core") {
 
     // https://stackoverflow.com/a/54006518
     processResources {
-        expand(['appVersionCode': appVersionCode])
+        expand([
+                'appVersionCode': appVersionCode,
+                'appVersionName': appVersionName,
+        ])
     }
 }
 
