Rename gradle flag 'onlyServer' to 'excludeAndroid' to better explain WHY it exists.
As per the README, the newer Android gradle plugin require the Android SDK just
to *configure* the android project in libgdx, let alone build it. This makes
the heroku deployment fail when it tries to build the server as it
(rightly so) doesn't have the Android SDK available.

--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,6 @@ allprojects {
 
 task stage(dependsOn: [':server:dist'])
 
-if (!hasProperty('onlyServer')) {
 project(":texture-packer") {
     apply plugin: "kotlin"
 
@@ -69,6 +68,7 @@ project(":desktop") {
     }
 }
 
+if (!hasProperty('excludeAndroid')) {
 project(":android") {
     apply plugin: "android"
     apply plugin: "kotlin-android"
