--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,5 @@
-if (!hasProperty('onlyServer')) {
-    include 'desktop', 'android', 'texture-packer'
+if (!hasProperty('excludeAndroid')) {
+    include 'android'
 }
 
-include 'core', 'server'
+include 'core', 'desktop', 'server', 'texture-packer'
