Improvements to server jar generation - include version name in binary.

--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ allprojects {
     }
 }
 
-task stage(dependsOn: [':server:dist'])
+task stage(dependsOn: [':server:clean', ':server:dist'])
 
 project(":texture-packer") {
     apply plugin: "kotlin"
