Enable Estonian translation, add tests to check for malformed translations involving plurals.

--- a/build.gradle
+++ b/build.gradle
@@ -114,6 +114,13 @@ project(":core") {
         implementation "io.ktor:ktor-websockets:$ktor_version"
         implementation "ch.qos.logback:logback-classic:1.2.3" // For server related logging (not Android - and hence game - logging, that uses Gdx.app.log)
         implementation 'org.jmdns:jmdns:3.5.7'
+
+        testImplementation 'junit:junit:4.13.2'
+        testImplementation "org.mockito:mockito-all:1.9.0"
+
+        testImplementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
+        testImplementation "com.badlogicgames.gdx:gdx:$gdxVersion"
+        testImplementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
     }
 
     // https://stackoverflow.com/a/54006518
