--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ project(":texture-packer") {
     apply plugin: "kotlin"
 
     dependencies {
+        implementation project(":core")
         implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
