Remove accidental reference to beatgame from code.
The original skeleton of this game was copied from that game, and this was
accidentaly left here.

--- a/texture-packer/build.gradle
+++ b/texture-packer/build.gradle
@@ -3,7 +3,7 @@ apply plugin: "kotlin"
 sourceCompatibility = 1.7
 sourceSets.main.java.srcDirs = [ "src/" ]
 
-project.ext.mainClassName = "com.serwylo.beatgame.bin.TexturePackerKt"
+project.ext.mainClassName = "com.serwylo.retrowars.bin.TexturePackerKt"
 
 task packTextures(dependsOn: classes, type: JavaExec) {
     main = project.mainClassName
