--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -1,4 +1,4 @@
-sourceCompatibility = 1.7
+sourceCompatibility = JavaVersion.VERSION_1_8
 sourceSets.main.java.srcDirs = [ "src/" ]
 sourceSets.main.resources.srcDirs = ["../android/assets"]
 
@@ -26,7 +26,8 @@ task dist(type: Jar) {
     manifest {
         attributes 'Main-Class': project.mainClassName
     }
-    baseName 'retrowars'
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    archiveBaseName = 'retrowars'
     version project.ext.appVersionName
     dependsOn configurations.runtimeClasspath
     from {
@@ -34,7 +35,6 @@ task dist(type: Jar) {
     }
     with jar
 }
-
 
 dist.dependsOn classes
 
